--- a/src/auction-service/Auction.API/appsettings.json
+++ b/src/auction-service/Auction.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5437;Database=ev_auction;Username=ev_auction;Password=ev_auction_pw"
+  }
 }
