feat(payment): Update payment-service to work well with frontend

--- a/src/payment-service/Payment.API/appsettings.json
+++ b/src/payment-service/Payment.API/appsettings.json
@@ -13,15 +13,14 @@
   "VnPay": {
     "TmnCode": "YY9Z54AK",
     "HashSecret": "WYO92MO3G8TE22OKHJNCRC1EU5USSZX9",
-    "ReturnUrl": "https://skinflintily-subinvolute-merideth.ngrok-free.dev/api/payment/vnpay-return",
+    "ReturnUrl": "http://localhost:8000/api/payment/vnpay-return",
     "VnPayUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "RefundApiUrl": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
     "PaymentBackReturnUrl": "https://skinflintily-subinvolute-merideth.ngrok-free.dev/Checkout/PaymentCallbackVnpay"
   },
-  "Clients": {
-      // Khi chạy local, client gọi thẳng qua cổng Gateway (8000)
-    "OrderApiBaseUrl": "http://localhost:8000/order-internal",
-    "IdentityApiBaseUrl": "http://localhost:8000/identity-internal"
+  "Frontend": {
+    // Base URL của React app (nơi có PaymentResultPage.tsx)
+    "BaseUrl": "http://localhost:5173"
   },
   "Jwt": {
     "Key": "this_is_my_super_secret_key_123456789",
