Fix notification for Order service

--- a/src/order-service/Order.API/appsettings.json
+++ b/src/order-service/Order.API/appsettings.json
@@ -11,9 +11,15 @@
   "VnPay": {
     "TmnCode": "YY9Z54AK",
     "HashSecret": "WYO92MO3G8TE22OKHJNCRC1EU5USSZX9",
-    "ReturnUrl": "https://skinflintily-subinvolute-merideth.ngrok-free.dev/api/payment/vnpay-return",
+    "ReturnUrl": "https://unfastidious-pearlie-unspasmodical.ngrok-free.dev/api/payment/vnpay-return",
     "VnPayUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "RefundApiUrl": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "UserName": "ev_user",
+    "Password": "ev_pass_very_secret"
   },
   "Jwt": {
     "Key": "this_is_my_super_secret_key_123456789",
