--- a/src/order-service/Order.Infrastructure/Order.Infrastructure.csproj
+++ b/src/order-service/Order.Infrastructure/Order.Infrastructure.csproj
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
