Fix notification for Notification serfice

--- a/src/notification-service/NotificationService.API/appsettings.json
+++ b/src/notification-service/NotificationService.API/appsettings.json
@@ -16,12 +16,16 @@
     "Exchange": {
       "Rating": "rating_exchange",
       "Complaint": "complaint_exchange",
-      "Identity": "identity_exchange"
+      "Identity": "identity_exchange",
+      "Order": "order_exchange",
+      "Payment":  "payment_exchange"
     },
     "Queues": {
       "Rating": "notification_rating_queue",
       "Complaint": "notification_complaint_queue",
-      "Identity": "notification_identity_queue"
+      "Identity": "notification_identity_queue",
+      "Order": "notification_order_queue",
+      "Payment":  "notification_payment_queue"
     }
   },
   "Jwt": {
